fix: react Select Option z-index priority upgrade & NaN is lock

--- a/src/assets/scss/games.scss
+++ b/src/assets/scss/games.scss
@@ -2262,3 +2262,7 @@ $gray-700: #4e5154;
     display: flex;
     justify-content: space-between;
 }
+
+.MuiPopover-root.MuiMenu-root.MuiModal-root {
+    z-index: 10000;
+}
